# C-learning

./: CFile1.c  binary_relocations.c  encoder_binary_moving.c  printing.c  the_move_command.c
Pointers/: Constant_Pointer_VS_Pointer_To_A_Constant.c  Why does pointer b have a different value than pointer a if they point to the same value.md  example1.c  example2.c
String In Char Array VS. Pointer To String Literal/: main.c
memory_operations/: memcpy_function.c  strcpy_vs_memcpy.c
other_examples/: copy_values_into_uint_8t_array.c
population_count/: CMakeLists.txt
population_count/include/: constants.h  popcount64a.h  popcount64b.h  popcount64c.h  popcount64d.h
population_count/src/: main.c  popcount64a.c  popcount64b.c  popcount64c.c  popcount64d.c
printing/printing_binary/: print_binary.c  print_binary.h
